--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "server"
+name = "client"
 version = "0.1.0"
 authors = ["Rishit Khandelwal <rishitkh@gmail.com>"]
 edition = "2018"
